--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
     "@loopback/rest": "^9.1.0",
     "@loopback/rest-explorer": "^3.0.4",
     "@loopback/service-proxy": "^3.0.4",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5",
     "just-camel-case": "^4.0.2",
     "just-clone": "^3.1.0",
     "just-pluralize": "0.0.3",
     "just-safe-set": "^2.1.0",
+    "lodash": "^4.17.21",
     "loopback-connector-mongodb": "^5.2.3",
+    "natural": "^4.0.0",
     "promise-map-limit": "^1.0.0",
+    "source-map": "^0.7.3",
+    "textversionjs": "^1.1.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -37,6 +43,7 @@
     "@loopback/eslint-config": "^10.0.2",
     "@loopback/testlab": "^3.2.8",
     "@types/node": "^10.17.44",
+    "@types/textversionjs": "^1.1.0",
     "eslint": "^7.12.1",
     "source-map-support": "^0.5.19",
     "typescript": "~4.0.5"
@@ -61,6 +68,7 @@
     "openapi-spec": "node ./dist/openapi-spec",
     "prestart": "yarn run build",
     "start": "node -r source-map-support/register .",
+    "start:dev": "source ../wordzonia_back.env && node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache"
   }
 }
