--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "promise-map-limit": "^1.0.0",
     "source-map": "^0.7.3",
     "textversionjs": "^1.1.3",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "wordnet": "^0.1.2",
+    "wordpos": "^2.1.0"
   },
   "devDependencies": {
     "@loopback/build": "^6.2.6",
@@ -68,7 +70,7 @@
     "openapi-spec": "node ./dist/openapi-spec",
     "prestart": "yarn run build",
     "start": "node -r source-map-support/register .",
-    "start:dev": "source ../wordzonia_back.env && node -r source-map-support/register .",
+    "start:dev": "source ./dev.env && node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache"
   }
 }
